2. Добавил комментарии